--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Order&PaymentProcessingSystem
 
 
 # H2 database
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./data/testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -19,6 +19,10 @@ spring.h2.console.path=/h2-console
 #Swagger-ui
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+
+
+app.security.admin.username=admin
+app.security.admin.password=password
 
 
 server.port=8080
